Bug 311210 - Bad default track rendering
Summary: Bad default track rendering
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR task
Target Milestone: ---
Assignee: Sanjiban Bairagya
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-05 15:55 UTC by Dennis Nienhüser
Modified: 2013-04-24 21:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Nienhüser 2012-12-05 15:55:24 UTC
Our default track rendering is a thin green line. It's hardly noticable and several people already complained about it - e.g. in IRC or here: http://server.ericsbinaryworld.com/blog/2012/12/04/spaceship-earth-viewed-through-marble/

The default rendering should use a different color and a thicker pen stroke. We might also want to make it configurable.
Comment 1 Dennis Nienhüser 2013-04-24 17:42:03 UTC
Tracks received by Marble from a GPS device are displayed using this style:

    GeoDataStyle style;
    GeoDataLineStyle lineStyle;
    QColor transparentRed = Oxygen::brickRed4;
    transparentRed.setAlpha( 200 );
    lineStyle.setColor( transparentRed );
    lineStyle.setWidth( 4 );
    style.setLineStyle(lineStyle);
    style.setStyleId("track");

GPXgpxTagHandler.cpp (in src/plugins/runner/gpx/handlers/) should setup a similar style instead of the current one which looks like this:

    GeoDataStyle style;
    GeoDataLineStyle lineStyle;
    lineStyle.setColor( Oxygen::forestGreen4 );
    lineStyle.setWidth(2);
    style.setLineStyle(lineStyle);
    style.setStyleId("track");

My suggestion would be to reuse the red track style properties except for the color itself which i'd choose slightly more saturated (possibly brickRed6) such that an active track can be distinguished from one loaded from file.

Please do a similar approach for the route style in the same file. RoutingLayer.cpp is where the active route is painted.
Comment 2 Dennis Nienhüser 2013-04-24 21:22:31 UTC
Git commit 10aa4d4eb78f694bf65b0736d93c9c2f59a6c1d4 by Dennis Nienhüser, on behalf of Sanjiban Bairagya.
Committed on 24/04/2013 at 22:58.
Pushed by nienhueser into branch 'master'.

Improve rendering of GPX tracks and routes.

The rendering of tracks and routes is now identical to the rendering
of tracks and routes created by Marble itself, except that the color
is slightly more saturated in order to make it possible to distinguish
them.
REVIEW: 110161

M  +8    -4    src/plugins/runner/gpx/handlers/GPXgpxTagHandler.cpp

http://commits.kde.org/marble/10aa4d4eb78f694bf65b0736d93c9c2f59a6c1d4