Improve rendering of GPX tracks and routes.

The rendering of tracks and routes is now identical to the rendering
of tracks and routes created by Marble itself, except that the color
is slightly more saturated in order to make it possible to distinguish
them.

BUG: 311210
REVIEW: 110161